[GH-375] Refactor snapshot creation, DAO and service tests (WIP), statistics, search.